<resources>
  <string name="app_name">Mazoezi Gymnasium</string>
  <string name="memberFirstName">First Name</string>
  <string name="memberLastName">Last Name</string>
  <string name="instructorEmail">Email</string>
  <string name="memberAge">Age</string>
  <string name="memberWeight">Weight</string>
  <string name="memberTargetWeight">Target Weight</string>
  <string name="instructorGender">Gender</string>
  <string name="view_profile">View Profile</string>
  <string name="instructorNames">Names</string>
  <string name="view_gym_instructors">View Gym Instructors</string>
  <string name="gym_location">Location</string>
  <string name="gym_opening_time">Opening Time</string>
  <string name="gym_closing_time">Closing Time</string>
  <string name="session_date">Date</string>
  <string name="session_location">Session Location</string>
  <string name="session_exercise">Exercise</string>
  <string name="session_reps">Reps</string>
  <string name="session_sets">Sets</string>
  <string name="pick_date">Date</string>
  <string name="choose_date">Choose the Date</string>
  <string name="add_session">Add Session</string>
  <string name="view_sessions_history">View Sessions History</string>
  <string name="add_work_out_session">Add Work Out Session</string>
  <string name="view_gym_locations">View Gym Locations</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="pref_title_vibrate">Vibrate</string>
  <string name="tap_to_add_a_date">Tap to add a session date</string>
  <string name="open_map">Open Map</string>
  <string name="male_gender">Male</string>
  <string name="female_gender">Female</string>
  <string name="enter_password">Enter Password</string>
  <string name="confirm_password">Confirm password</string>
  <string name="sign_up">Sign Up</string>
  <string name="password_mismatch">Passwords don\'t match!</string>
  <string name="short_password">Short Password! Ensure it\'s 8 characters long!</string>
  <string name="signed_up">You are signed up :-)</string>
  <string name="update_profile">Update Profile</string>

  <string name="com_auth0_client_id">JfX17NIIulEbM5dIEV_rmoN-UKgnZBKZ</string>
  <string name="com_auth0_domain">mazoezi.auth0.com</string>
  <string name="our_awesome_gym_instructor">Our awesome gym instructor</string>
  <string name="profile_picture">Profile Picture</string>
  <string name="not_logged_in">Not logged in</string>
  <string name="show_log_in">Show Log in</string>
  <string name="login_image">Login Image</string>

  <string name="option_get_place">Get place</string>
  <string name="log_out">Log Out</string>
  <string name="required_email">Your instructorEmail is required!</string>
  <string name="no_previous_sessions">No previous work out sessions</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value" />

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>
  <string name="settings">Settings</string>


  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="openDrawer">open_drawer</string>
  <string name="closeDrawer">close_drawer</string>

  <!-- Navigation Drawer menu labels -->
  <string name="nav_home">Home</string>
  <string name="nav_profile">Profile</string>
  <string name="nav_instructors">Instructors</string>
  <string name="nav_locations">Locations</string>
  <string name="nav_history">History</string>
  <string name="nav_session">Add Session</string>
  <string name="nav_settings">Settings</string>

  <!-- Toolbar titles when navigation menu item is selected -->
  <string-array name="nav_item_activity_titles">
    <item>Home</item>
    <item>Profile</item>
    <item>Instructors</item>
    <item>Locations</item>
    <item>History</item>
    <item>Add Session</item>
    <item>Settings</item>
  </string-array>

  <string name="activity_title_about_us">About Us</string>
  <string name="action_logout">Logout</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_home">Mazoezi Gymnasium</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="welcome">Welcome</string>

</resources>
