<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openProfile"
        android:text="@string/view_profile" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editProfile"
        android:text="@string/edit_profile"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openGymInstructors"
        android:text="@string/view_gym_instructors" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewGymLocations"
        android:text="@string/view_gym_locations" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="viewHistory"
        android:text="@string/view_sessions_history" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addSession"
        android:text="@string/add_work_out_session" />

</LinearLayout>