<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workoutsessions.addsession.AddWorkOutSessionActivity">

    <TextView
        android:id="@+id/pick_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:layout_marginVertical="@dimen/fab_margin"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_below="@id/pick_date_label"
        android:hint="@string/tap_to_add_a_date"
        android:onClick="showDatePickerDialog"/>

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/location_spinner"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginStart="12dp"
        android:text="@string/session_location" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="118dp"
        android:layout_marginTop="126dp" />

    <TextView
        android:id="@+id/exercise_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/location_label"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="182dp"
        android:text="@string/session_exercise" />

    <Spinner
        android:id="@+id/exercise_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/add_reps"
        android:layout_alignTop="@+id/exercise_label" />

    <TextView
        android:id="@+id/add_sets_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/location_spinner"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:text="@string/session_sets" />

    <EditText
        android:id="@+id/add_sets"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_date"
        android:layout_centerVertical="true"
        android:hint="@string/session_sets"
        android:inputType="number" />

    <TextView
        android:id="@+id/add_reps_label"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="186dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginStart="28dp"
        android:text="@string/session_reps" />

    <EditText
        android:id="@+id/add_reps"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="179dp"
        android:layout_marginEnd="103dp"
        android:hint="@string/session_reps"
        android:inputType="number" />

    <Button
        android:id="@+id/add_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:onClick="addSession"
        android:text="@string/add_session" />

</RelativeLayout>