<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".members.UpdateProfileActivity">

  <ProgressBar
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/first_name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/memberFirstName" />

    <EditText
      android:id="@+id/firstName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/memberFirstName"
      android:inputType="textPersonName" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/last_name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/memberLastName" />

    <EditText
      android:id="@+id/lastName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/memberLastName"
      android:inputType="textPersonName" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/age_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/memberAge" />

    <EditText
      android:id="@+id/age"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/memberAge"
      android:inputType="number" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/weight_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/memberWeight" />

    <EditText
      android:id="@+id/weight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/memberWeight"
      android:inputType="numberDecimal" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/target_weight_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/memberTargetWeight" />

    <EditText
      android:id="@+id/targetWeight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/memberTargetWeight"
      android:inputType="numberDecimal" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/btn_update_profile"
      android:enabled="false"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/update_profile"
      android:onClick="updateProfile"/>

  </LinearLayout>

</LinearLayout>