<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".members.ProfileFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <ProgressBar
        android:id="@+id/profile_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

      <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_picture" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/first_name_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberFirstName" />

        <TextView
          android:id="@+id/first_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberFirstName" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/last_name_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberLastName" />

        <TextView
          android:id="@+id/last_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberLastName" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/email_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/instructorEmail" />

        <TextView
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/instructorEmail" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/age_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberAge" />

        <TextView
          android:id="@+id/age"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberAge" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/gender_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/instructorGender" />

        <TextView
          android:id="@+id/gender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/instructorGender" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/weight_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberWeight" />

        <TextView
          android:id="@+id/weight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberWeight" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/target_weight_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fab_margin"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberTargetWeight" />

        <TextView
          android:id="@+id/target_weight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/fab_margin"
          android:text="@string/memberTargetWeight" />

      </LinearLayout>

    </LinearLayout>

  </ScrollView>

</FrameLayout>