<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin">

    <TextView
        android:id="@+id/gym_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_location"
        android:layout_marginHorizontal="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/gym_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_location"
        android:layout_toEndOf="@id/gym_location_label"
        android:layout_marginHorizontal="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/gym_opening_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_opening_time"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_below="@id/gym_location_label"/>

    <TextView
        android:id="@+id/gym_opening_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_opening_time"
        android:layout_toEndOf="@id/gym_opening_time_label"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_below="@id/gym_location"/>

    <TextView
        android:id="@+id/gym_closing_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_closing_time"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_below="@id/gym_opening_time_label"/>

    <TextView
        android:id="@+id/gym_closing_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_closing_time"
        android:layout_toEndOf="@id/gym_closing_time_label"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_below="@id/gym_opening_time"/>

</RelativeLayout>
